--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,14 +3,20 @@ html {
   min-height: 100%;
 }
 body {
-  margin-bottom: 60px; /* Margin bottom by footer height */
+  margin-bottom: 75px; /* Margin bottom by footer height */
 }
 .navbar-header{
 	background-color: #4aaaa5;
 }
+h1, h2, h3, h4, h5, h6{
+	font-family: 'Georgia', Times, Times New Roman, serif;
+}
 a.navbar-brand{
 	background-color: #4aaaa5;
-	color: #eee;
+	color: #fff !important;
+	font-size: 2em;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	text-align: center !important;
 }
 a.navbar-brand:hover{
 	background-color: #4aaaa5 !important;
@@ -39,9 +45,28 @@ img{
 }
 div.main, div.sidebar{
 	margin-bottom: 1em;
+	border: 2px solid #4aaaa5;
 }
-button{
-	padding-bottom: 1em;
+button.btn-primary{
+	margin-bottom: 1em;
+}
+.featurette-divider {
+	border: 2px solid #ccc;
+}
+.standardFont{
+	color: #777777;
+	line-height: 150%;
+}
+a.navLink:hover{
+	font-weight: bold;
+  	color: blue !important;
+}
+a.navLink:active{
+	font-weight: bold;
+  	color: orange !important;
+}
+li.liNav:hover, li.liNav:active{
+	text-decoration: underline;
 }
 .hovereffect {
 width:100%;
@@ -122,10 +147,15 @@ transform:translatey(0);
 transition-delay:.2s;
 }
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-  background-color: #f5f5f5;
+  	position: absolute;
+  	bottom: 0;
+  	width: 100%;
+  	height: 75px;
+  	line-height: 60px;
+  	background-color: #666666;
+  	border-top: 5px solid;
+	border-color: #4aaaa5;
+	text-align: center;
+	color: #fff;
+	font-size: 1.25em;
 }
